// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorsView displays nothing if no errors 1`] = `<div />`;

exports[`ErrorsView displays procedure link if unknown procedure 1`] = `
<div>
  <div
    class="sc-cidDSM eebNqc"
  >
    <div
      class="sc-jcFjpl htSCWQ"
    >
      <div
        class="sc-caiLqq bWOMeI"
      >
        <div
          class="sc-cTAqQK sc-dPiLbb fXZfYP dqWZGx"
        >
          ERROR
        </div>
        <h4
          class="sc-hUpaCq cnmLqL"
        >
          Neo.ClientError.Procedure.ProcedureNotFound
        </h4>
      </div>
      <div
        class="sc-iUKqMP"
      >
        <pre
          class="sc-gSQFLo hsNBUp"
          data-testid="cypherFrameErrorMessage"
        >
          not found
        </pre>
      </div>
      <div
        class="sc-efQSVx UgOjE"
      >
        <a
          class="sc-iAKWXU iaEcaE"
        >
          <i
            class="sc-bdvvtL jWhaJw fa fa-play-circle-o"
          />
           List available procedures
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`ErrorsView does displays an error 1`] = `
<div>
  <div
    class="sc-cidDSM eebNqc"
  >
    <div
      class="sc-jcFjpl htSCWQ"
    >
      <div
        class="sc-caiLqq bWOMeI"
      >
        <div
          class="sc-cTAqQK sc-dPiLbb fXZfYP dqWZGx"
        >
          ERROR
        </div>
        <h4
          class="sc-hUpaCq cnmLqL"
        >
          Test.Error
        </h4>
      </div>
      <div
        class="sc-iUKqMP"
      >
        <pre
          class="sc-gSQFLo hsNBUp"
          data-testid="cypherFrameErrorMessage"
        >
          Test error description
        </pre>
      </div>
    </div>
  </div>
</div>
`;
